# google-books-highlights-export

./: .gitignore  README.md  pyproject.toml
google_books_highlights_export/: __init__.py  googledrive.py  jsonwriter.py  notes.py  vimwiki.py
