[tool.poetry]
name = "google-books-highlights-export"
version = "0.2.0"
description = "Export your Google Play Books highlights from Google Drive"
authors = ["Andrew Magee <amagee@gmail.com>"]
license = "MIT"
homepage = "https://github.com/amagee/google-books-highlights-export"
repository = "https://github.com/amagee/google-books-highlights-export"

[tool.poetry.scripts]
google-books-highlights-export = "google_books_highlights_export:main"

[tool.poetry.dependencies]
python = "^3.6"
google-api-python-client = "^2.9.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.4"
beautifulsoup4 = "^4.9.3"
appdirs = "^1.4.4"
typer = "^0.3.2"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
